# codegen

./: .env  .gitignore  README.md  codegen.py  compose.yaml  event_listener.py  logger.py  main.py  package-lock.json  package.json  requirements.txt  run_codegen.ps1
.github/workflows/: push.yaml  python-app.yml
agent_ops/: .gitignore  Dockerfile  README.md
agent_ops/src/: main.py  test_plan.md
ai/: __init__.py  agents.py  main.py  plan.txt
ai/codegen/: agents.py  azure_config.py  base.py  engine.py  lab.py  main.py  request_handler.py  tasks.py
ai/config/: agents.yaml  config.py  llm_config.py
ai/infrastructure/: colors.py  common.py  constants.py  enums.py  utils.py
ai/modules/: image_compression.py
ai/src/: main.py  test_plan.md
bini_ai/codegen/: agents.py  common.py  (+3 more)
bini_code/: agents.py  common.py  engine.py  main.py  tasks.py
client/: .dockerignore  Dockerfile
core/: jira.py  logger.py  paths.py
engine/: codegen.py  event_listener.py  lab.py  logic.py
event_recorder/: main.py
exmaple/: README.md  pyproject.toml
exmaple_flow/: README.md  pyproject.toml
exmaple_flow/src/exmaple_flow/: main.py
frontend/: index.html  package-lock.json  package.json
functions/: create_call.py  rest_request.py
output/: converted_test_code.py  page_base.csv  page_base_after_ai.csv  page_base_beofre_ai.csv  test_code.py
server/: routes.ts
shared/: schema.ts
src/: converted_test_plan.py  crewai_flow.html  main.py  plan.md
tests/: Dockerfile  test_api.py  test_bini.py  test_binifix.py  test_binifix_corrected.py  test_plan.md  wrong_test_sample.py
(+239 files in other folders)
